# Qbmm-Profiling-Tools

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  GenerateBuildIdHeader.cmake  LICENSE.txt  README.md  ref.bib
applications/: core_inversion_benchmark.cpp  eigensolver_benchmark_general.cpp  eigensolver_benchmark_moments.cpp  general_eigensolver_benchmark.cpp  linsolver_benchmark.cpp  qmom_core_inversion.cpp  qmom_eigensolver.cpp  qmom_linsolver.cpp  qmom_subroutines_profiler.cpp
doc/: Doxyfile.in
include/: build_id.hpp.in  constants.hpp  eigen_defs.hpp  factory.hpp  global_defs.hpp  io_utils.hpp  moment_utils.hpp
numerical_study/: generate_data.sh  input_dataset_analysis.py
numerical_study/0.1_eigensolve_benchmark_general/: eigensolver_benchmark_general_gnu  eigensolver_benchmark_general_intel  post_process.py  qmom_eigensolver_gnu  qmom_eigensolver_intel  run.sh
numerical_study/0.1_eigensolve_benchmark_general/01a_eigenvalues_only/: run.sh
numerical_study/0.1_eigensolve_benchmark_general/01a_eigenvalues_only/gnu/: eigensolver_benchmark_general  qmom_eigensolver_gnu
numerical_study/0.1_eigensolve_benchmark_general/01a_eigenvalues_only/intel/: eigensolver_benchmark_general
numerical_study/0.1_eigensolve_benchmark_general/01b_eigenvalues_eigenvectors/: run.sh
numerical_study/0.1_eigensolve_benchmark_general/01b_eigenvalues_eigenvectors/gnu/: general_eigensolver_benchmark
numerical_study/0.1_eigensolve_benchmark_general/01b_eigenvalues_eigenvectors/intel/: general_eigensolver_benchmark  qmom_eigensolver_intel
numerical_study/1.1_core_inversion_benchmark/: postprocess.py  postprocess_config_all.py  qmom_core_inversion_gnu  qmom_core_inversion_intel  run.sh
numerical_study/1.1_core_inversion_benchmark/gnu_np1/: core_inversion_benchmark  qmom_core_inversion  setup.inp
numerical_study/1.1_core_inversion_benchmark/gnu_test/: test.py
numerical_study/1.1_core_inversion_benchmark/intel_np1/: qmom_core_inversion
numerical_study/1.1_core_inversion_benchmark/intel_np6/: core_inversion_benchmark
numerical_study/1.2_jacobi_eigensolve_benchmark/1.2.1_linsolve_benchmark/: postprocess.py  postprocess_config.py  postprocess_config_all.py  run.sh
numerical_study/1.2_jacobi_eigensolve_benchmark/1.2.1_linsolve_benchmark/gnu/: linsolver_benchmark  qmom_linsolver  setup.inp
numerical_study/1.2_jacobi_eigensolve_benchmark/1.2.1_linsolve_benchmark/intel/: linsolver_benchmark  qmom_linsolver  run.sh  setup.inp
numerical_study/1.2_jacobi_eigensolve_benchmark/1.2.2_eigensolve_benchmark_moments/: postprocess.py  postprocess_config_all.py  qmom_eigensolver_gnu  qmom_eigensolver_intel  run.sh  run_all_parallel.sh
numerical_study/1.2_jacobi_eigensolve_benchmark/1.2.2_eigensolve_benchmark_moments/gnu_np6/: eigensolver_benchmark_moments  qmom_eigensolver  setup.inp
numerical_study/1.2_jacobi_eigensolve_benchmark/1.2.2_eigensolve_benchmark_moments/intel_np1/: qmom_eigensolver  run.sh
numerical_study/1.2_jacobi_eigensolve_benchmark/1.2.2_eigensolve_benchmark_moments/intel_np6/: eigensolver_benchmark_moments  run.sh
python_tools/: .gitignore  generate_random_moments.py  plot_tools.py  quad_correct.py
scripts/: build.sh  build_all.sh  intel-env-config.sh  load-gnu.sh  load-intel.sh  run_valgrind.sh
src/: cholesky.cpp  cholesky.hpp  collision_integral_functions.hpp  core_inversion.cpp  core_inversion.hpp  eigensolve.cpp  eigensolve.hpp  linsolve.cpp  linsolve.hpp  physical_models.cpp  physical_models.hpp  qmom.cpp  qmom.hpp  qmom_profiler.cpp  qmom_profiler.hpp
tests/: test_build_id.cpp  test_cholesky.cpp  test_core_inversion.cpp  test_eigensolve.cpp  test_linsolve.cpp  test_moment_utils.cpp  test_physical_models.cpp  test_qmom.cpp
